--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1056,6 +1056,7 @@ body {
 }
 
 .main {
+  position: relative;
   width: 1190px;
   height: 640px;
   margin: 0 auto;
@@ -1698,6 +1699,35 @@ body {
 }
 .msg-history .pager .pager-nav .iconfont:hover {
   border: 1px solid #999999;
+}
+
+.blank {
+  position: absolute;
+  top: 0;
+  left: 230px;
+  z-index: 99;
+  width: 960px;
+  height: 640px;
+  background-color: #eee;
+  font-size: 16px;
+  text-align: center;
+}
+.blank .blank-txt {
+  display: inline-block;
+  width: 200px;
+  margin: 200px auto 0;
+  text-align: center;
+  color: #999999;
+}
+.blank .blank-txt img {
+  width: 100%;
+  margin-bottom: 15px;
+}
+.blank .blank-txt p {
+  padding-top: 15px;
+  border-top: 1px solid #999999;
+  color: #666;
+  text-shadow: 1px 1px 0px #cccccc;
 }
 
 .pop-service {
