--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -46,6 +46,7 @@ body{
   padding-top: 100px;
 }
 .main{
+  position: relative;
   width: 1190px;
   height: 640px;
   margin: 0 auto;
@@ -658,6 +659,42 @@ body{
           border: 1px solid #999;
         }
       }
+    }
+  }
+
+}
+
+
+
+// 未选择聊天
+.blank{
+  position: absolute;
+  top: 0;
+  left: 230px;
+  z-index: 99;
+
+  width: 960px;
+  height: 640px;
+  background-color: #eee;
+  font-size: 16px;;
+  text-align: center;
+
+
+  .blank-txt{
+    display: inline-block;
+    width: 200px;
+    margin: 200px auto 0;
+    text-align: center;
+    color: $grayLight;
+    img{
+      width: 100%;
+      margin-bottom: 15px;
+    }
+    p{
+      padding-top: 15px;
+      border-top: 1px solid #999;
+      color: #666;
+      text-shadow: 1px 1px 0px #ccc;
     }
   }
 
