--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1249,11 +1249,12 @@ body {
   color: #fff;
 }
 .chat-item .hd .num b {
-  -webkit-transform: scale(0.6);
-  -moz-transform: scale(0.6);
-  -ms-transform: scale(0.6);
-  -o-transform: scale(0.6);
-  transform: scale(0.6);
+  display: inline-block;
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+  transform: scale(0.9);
 }
 .chat-item .bd {
   color: #88ccff;
