--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1345,16 +1345,15 @@ body {
   font-size: 14px;
 }
 .chat-area-bd .msg-system {
-  position: relative;
-  margin: 10px auto;
-  max-width: 50%;
-  text-align: center;
   font-size: 12px;
-  color: #999;
   clear: both;
 }
 .chat-area-bd .msg-system-his {
-  margin-top: 20px;
+  position: relative;
+  margin: 20px auto 10px;
+  max-width: 50%;
+  text-align: center;
+  color: #999;
 }
 .chat-area-bd .msg-system-his .line {
   position: absolute;
