--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1345,15 +1345,16 @@ body {
   font-size: 14px;
 }
 .chat-area-bd .msg-system {
+  position: relative;
+  margin: 10px auto;
+  max-width: 50%;
+  text-align: center;
   font-size: 12px;
+  color: #999;
   clear: both;
 }
 .chat-area-bd .msg-system-his {
-  position: relative;
-  margin: 20px auto 10px;
-  max-width: 50%;
-  text-align: center;
-  color: #999;
+  margin-top: 20px;
 }
 .chat-area-bd .msg-system-his .line {
   position: absolute;
@@ -1483,6 +1484,36 @@ body {
 .chat-edit {
   position: relative;
   height: 165px;
+}
+.chat-edit .msg-new-tip {
+  position: absolute;
+  top: -31px;
+  left: 0;
+  display: table;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 20px;
+  background-color: #feeecc;
+}
+.chat-edit .msg-new-tip .avatar {
+  display: table-cell;
+  width: 16px;
+  height: 16px;
+  border: none;
+  border-radius: 0;
+  vertical-align: middle;
+}
+.chat-edit .msg-new-tip .msg-new-txt {
+  display: inline-block;
+  margin-left: 10px;
+}
+.chat-edit .msg-new-tip .iconfont-close {
+  position: absolute;
+  top: 2px;
+  right: 20px;
+  font-size: 12px;
+  cursor: pointer;
 }
 .chat-edit .toolbar {
   padding: 4px 17px;
