--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -316,16 +316,16 @@ body{
   font-size: 14px;
   // 系统消息
   .msg-system{
-
+    position: relative;
+    margin: 10px auto;
+    max-width: 50%;
+    text-align: center;
     font-size: 12px;
+    color: #999;
     clear: both;
   }
   .msg-system-his{
-    position: relative;
-    margin: 20px auto 10px;
-    max-width: 50%;
-    text-align: center;
-    color: #999;
+    margin-top: 20px;
     .line{
       position: absolute;
       top: 8px;
@@ -452,6 +452,38 @@ body{
 .chat-edit{
   position: relative;
   height: 165px;
+
+  .msg-new-tip{
+    position: absolute;
+    top: -31px;
+    left: 0;
+    display: table;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 20px;
+    background-color: #feeecc;
+
+    .avatar{
+      display: table-cell;
+      width: 16px;
+      height: 16px;
+      border: none;
+      border-radius: 0;
+      vertical-align: middle;
+    }
+    .msg-new-txt{
+      display: inline-block;
+      margin-left: 10px;
+    }
+    .iconfont-close{
+      position: absolute;
+      top: 2px;
+      right: 20px;
+      font-size: 12px;
+      cursor: pointer;
+    }
+  }
 
   // 工具栏
   .toolbar{
