--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1054,6 +1054,10 @@ select {
   overflow-x: hidden;
 }
 
+.com-panel {
+  padding-bottom: 14px;
+  border-bottom: 1px solid #e6e6e6;
+}
 .com-panel h4 {
   font-weight: normal;
   font-size: 14px;
