--- a/style/sass/module/cn.scss
+++ b/style/sass/module/cn.scss
@@ -28,6 +28,8 @@
 //===============================================================================
 // 公司信息
 .com-panel{
+  padding-bottom: 14px;
+  border-bottom: 1px solid #e6e6e6;
   h4{
     font-weight: normal;
     font-size: 14px;
