--- a/style/css/module/cn.css
+++ b/style/css/module/cn.css
@@ -54,11 +54,11 @@
 }
 
 .prod-lst {
-  padding: 17px 0 20px;
+  padding: 16px 0 20px;
   border-bottom: 1px solid #e6e6e6;
 }
 .prod-lst .prod-hd {
-  margin-bottom: 12px;
+  margin-bottom: 11px;
   overflow: hidden;
 }
 .prod-lst .prod-hd h3 {
@@ -89,8 +89,9 @@
 }
 .prod-lst .prod-info dt {
   width: 140px;
-  height: 44px;
+  height: 38px;
   font-size: 14px;
+  line-height: 18px;
   overflow: hidden;
 }
 .prod-lst .prod-info dt a {
@@ -104,7 +105,8 @@
 }
 .prod-lst .prod-info dd .prod-price {
   display: inline-block;
-  margin-top: 4px;
+  margin-top: 1px;
+  font-size: 14px;
   color: red;
 }
 .prod-lst .prod-info dd .btn {
