--- a/style/sass/module/cn.scss
+++ b/style/sass/module/cn.scss
@@ -9,6 +9,7 @@
     text-align: center;
     font-size: 14px;
     color: #666;
+    cursor: pointer;
   }
   .on{
     background-color: #fff;
@@ -18,6 +19,7 @@
 
 .prod-tab-con{
   padding: 20px 30px;
+  height: 590px;
   overflow-y: scroll;
   overflow-x: hidden;
 
@@ -59,9 +61,8 @@
 }
 
 // 商品信息
-.prod-lst{
-  padding: 16px 0 20px;
-  border-bottom: 1px solid #e6e6e6;
+.prod-lst-wrap{
+  padding: 16px 0 5px;
   .prod-hd{
     margin-bottom: 11px;
     overflow: hidden;
@@ -69,6 +70,23 @@
       float: left;
       font-size: 14px;
       font-weight: normal;
+    }
+  }
+  .prod-lst{
+    li{
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+      border-bottom: 1px solid #e6e6e6;
+      &:last-child{
+        margin-bottom: 0;
+      }
+    }
+  }
+  .prod-lst-history{
+    li{
+      padding-bottom: 0;
+      margin-bottom: 15px;
+      border-bottom: none;
     }
   }
   .prod-bd{
