--- a/style/sass/module/cn.scss
+++ b/style/sass/module/cn.scss
@@ -70,6 +70,10 @@
       font-size: 14px;
       font-weight: normal;
     }
+    .order-time{
+      color: #999;
+      float: right;
+    }
   }
   .prod-lst{
     li{
