--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1913,6 +1913,21 @@ body {
   text-shadow: 1px 1px 0px #cccccc;
 }
 
+.init {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 499;
+  width: 100%;
+  height: 640px;
+  padding-top: 50px;
+  background-color: #fff;
+  text-align: center;
+}
+.init .init-loading {
+  width: 50%;
+}
+
 .pop-service {
   min-height: 430px;
   font-size: 14px;
