--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -756,7 +756,22 @@ body{
 
 }
 
+// 初始化
+.init{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index:499;
+  width: 100%;
+  height: 640px;
+  padding-top: 50px;
+  background-color: #fff;
+  text-align: center;
 
+  .init-loading{
+    width: 50%;
+  }
+}
 
 
 
