--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -769,7 +769,12 @@ body{
   text-align: center;
 
   .init-loading{
-    width: 50%;
+    width: 40%;
+  }
+  p{
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
   }
 }
 
