--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1925,7 +1925,12 @@ body {
   text-align: center;
 }
 .init .init-loading {
-  width: 50%;
+  width: 40%;
+}
+.init p {
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .pop-service {
