--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -925,8 +925,8 @@ a.disabled {
 }
 
 .txt {
-  height: 14px;
-  line-height: 14px;
+  height: 24px;
+  line-height: 24px;
   padding: 5px 4px;
 }
 
@@ -1384,6 +1384,9 @@ body {
 .chat-item .info {
   padding: 2px 0;
 }
+.chat-item .info .nickname {
+  width: 105px;
+}
 .chat-item .hd {
   overflow: hidden;
 }
@@ -1412,11 +1415,10 @@ body {
   overflow: hidden;
 }
 .chat-item .bd .msg {
-  width: 100px;
+  width: 90px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 90px\0;
   float: left;
 }
 .chat-item .bd .time {
