--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1353,6 +1353,8 @@ body {
   color: #fff;
   text-align: center;
   line-height: 19px;
+  background-color: #000\0;
+  filter: alpha(opacity=60);
 }
 .nav-view .nav-view-offline a {
   color: #60a9ff;
