--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1926,14 +1926,12 @@ body {
   z-index: 499;
   width: 100%;
   height: 640px;
-  padding-top: 50px;
+  padding-top: 150px;
   background-color: #fff;
   text-align: center;
 }
-.init .init-loading {
-  width: 40%;
-}
 .init p {
+  margin-top: 50px;
   text-align: center;
   font-weight: bold;
   font-size: 18px;
