--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -785,6 +785,13 @@ body{
     text-align: center;
     font-weight: bold;
     font-size: 18px;
+    img{
+      vertical-align: sub;
+    }
+    .iconfont-information{
+      font-size: 24px;
+      color:#fb982a;
+    }
   }
 }
 
