--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1208,9 +1208,10 @@ body {
 }
 
 .avatar {
+  position: relative;
   width: 40px;
   height: 40px;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 50%;
   overflow: hidden;
   vertical-align: middle;
