--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -62,9 +62,10 @@ body{
 
 // common style
 .avatar{
+  position: relative;
   width: 40px;
   height: 40px;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   border-radius: 50%;
   overflow: hidden;
   vertical-align: middle;
