--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -934,6 +934,10 @@ body{
   width: 400px;
   padding: 50px;
   background-color: rgba(0, 0, 0, 0.6);
+  @if($ie8){
+    background-color: #000000\0;
+    filter:alpha(opacity=60);
+  }
   font-size: 16px;
   text-align: center;
   color: #fff;
