--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1958,6 +1958,7 @@ body {
 .pop-service .txtarea {
   width: 100%;
   height: 80px;
+  font-size: 14px;
 }
 .pop-service .faq-switch {
   margin-bottom: 10px;
