--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -2015,7 +2015,8 @@ body {
 .pop-service .faq-set .txt {
   width: 100%;
   height: 40px;
-  line-height: 40px;
+  padding: 10px 4px;
+  padding-top: 7px\0;
 }
 .pop-service .faq-set .txtarea {
   height: 150px;
