--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -273,6 +273,10 @@ body{
     .time{
       float: right;
     }
+    .iconfont-information{
+      margin-right: 2px;
+      vertical-align: -2px;
+    }
   }
 }
 .chat-item.on{
