--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1433,6 +1433,10 @@ body {
 .chat-item .bd .time {
   float: right;
 }
+.chat-item .bd .iconfont-information {
+  margin-right: 2px;
+  vertical-align: -2px;
+}
 
 .chat-item.on {
   background-color: #ffb600;
