--- a/style/sass/module/cn.scss
+++ b/style/sass/module/cn.scss
@@ -15,6 +15,7 @@
     background-color: #fff;
     color: #333;
   }
+
 }
 
 .prod-tab-con{
@@ -22,6 +23,16 @@
   height: 590px;
   overflow-y: scroll;
   overflow-x: hidden;
+  .prod-tip{
+    margin-top: 140px;
+    font-size: 16px;
+    text-align: center;
+    color:#666;
+    .iconfont-information{
+      font-size: 20px;
+      color:#ffb300;
+    }
+  }
 }
 
 
