--- a/style/sass/base/fonts.scss
+++ b/style/sass/base/fonts.scss
@@ -18,9 +18,19 @@
 
 .iconfont-error:before { content: "\e66b"; }
 
-.iconfont-information:before { content: "\e66c"; }
+.iconfont-infomation:before { content: "\e66c"; }
 
 .iconfont-close:before { content: "\e761"; }
+
+.iconfont-delete:before { content: "\e6f2"; }
+
+.iconfont-feedback:before { content: "\e6fa"; }
+
+.iconfont-refresh:before { content: "\e71e"; }
+
+.iconfont-success:before { content: "\e72d"; }
+
+.iconfont-kefu:before { content: "\e6d1"; }
 
 .iconfont-set:before { content: "\e77f"; }
 
@@ -39,11 +49,3 @@
 .iconfont-arrow-left:before { content: "\e786"; }
 
 .iconfont-arrow-right:before { content: "\e787"; }
-
-.iconfont-feedback:before { content: "\e6fa"; }
-
-.iconfont-success:before { content: "\e72d"; }
-
-.iconfont-delete:before { content: "\e6f2"; }
-
-.iconfont-refresh:before { content: "\e71e"; }
