--- a/style/css/base/fonts.css
+++ b/style/css/base/fonts.css
@@ -82,3 +82,19 @@
 .iconfont-arrow-right:before {
   content: "\e787";
 }
+
+.iconfont-data:before {
+  content: "\e611";
+}
+
+.iconfont-user:before {
+  content: "\e600";
+}
+
+.iconfont-seting:before {
+  content: "\e60d";
+}
+
+.iconfont-arrow-btm:before {
+  content: "\e601";
+}
