--- a/style/sass/base/fonts.scss
+++ b/style/sass/base/fonts.scss
@@ -49,3 +49,11 @@
 .iconfont-arrow-left:before { content: "\e786"; }
 
 .iconfont-arrow-right:before { content: "\e787"; }
+
+.iconfont-data:before { content: "\e611"; }
+
+.iconfont-user:before { content: "\e600"; }
+
+.iconfont-seting:before { content: "\e60d"; }
+
+.iconfont-arrow-btm:before { content: "\e601"; }
