--- a/style/css/module/vo.css
+++ b/style/css/module/vo.css
@@ -550,6 +550,7 @@ textarea:-ms-input-placeholder {
 .header {
   position: relative;
   height: 70px;
+  background-color: #0076be;
 }
 
 .main, .side-wrap {
@@ -560,7 +561,7 @@ textarea:-ms-input-placeholder {
 }
 
 .side-wrap {
-  width: 189px;
+  width: 200px;
   background-color: #fff;
   border-right: 1px solid #dadada;
   overflow: auto;
@@ -568,7 +569,7 @@ textarea:-ms-input-placeholder {
 }
 
 .main {
-  left: 190px;
+  left: 200px;
   bottom: 0;
   right: 0;
   overflow: auto;
@@ -578,15 +579,17 @@ textarea:-ms-input-placeholder {
 /* menu
 ----------------------------------------------------------------*/
 .menu-wrap {
-  padding: 5px 15px;
+  padding: 15px;
   position: relative;
 }
 
 .menu-hd {
   position: relative;
+  margin-bottom: 5px;
   color: #4d4d4d;
   font-weight: 700;
   text-align: left;
+  font-size: 14px;
 }
 .menu-hd .iconfont {
   margin: 0 6px 2px 0;
@@ -603,13 +606,16 @@ textarea:-ms-input-placeholder {
   border-bottom: none;
 }
 
+.menu-lst {
+  margin-bottom: 5px;
+}
 .menu-lst > li {
   margin-bottom: 4px;
 }
 .menu-lst a {
   display: block;
-  height: 24px;
-  line-height: 24px;
+  height: 26px;
+  line-height: 23px;
   padding-left: 26px;
   border: 1px solid white;
   border-radius: 3px;
@@ -622,13 +628,29 @@ textarea:-ms-input-placeholder {
 .menu-lst a:hover {
   color: #666;
   text-decoration: none;
-  border-color: #e6e6e6;
-  background-color: #f7f7f7;
+  border-color: #9fd6fd;
+  background-color: #e0f2fe;
 }
 
+.menu-sub {
+  margin-top: 8px;
+}
 .menu-sub .menu-hd {
-  padding-left: 26px;
+  padding-left: 27px;
+  margin-bottom: 8px;
+  font-size: 12px;
   font-weight: normal;
+}
+.menu-sub .menu-hd .iconfont {
+  position: absolute;
+  top: -2px;
+  right: 0;
+  font-weight: bold;
+  -webkit-transform: rotateX(180deg);
+  -moz-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  -o-transform: rotateX(180deg);
+  transform: rotateX(180deg);
 }
 .menu-sub .menu-lst a {
   padding-left: 37px;
@@ -1141,4 +1163,8 @@ select {
 
 .tab-con {
   padding: 40px 50px 0;
+}
+
+body {
+  font-family: "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
 }
