--- a/style/sass/component/vo_layout.scss
+++ b/style/sass/component/vo_layout.scss
@@ -4,20 +4,20 @@
 * update: 2017/11/6
 */
 
-.header{
+.header {
   position: relative;
   height: 70px;
   background-color: #0076be;
 }
 
-.main,.side-wrap {
+.main, .side-wrap {
   position: absolute;
-  left: 0;
   top: 70px;
   bottom: 0
 }
 
 .side-wrap {
+  left: 0;
   width: 200px;
   background-color: #fff;
   border-right: 1px solid #dadada;
@@ -27,12 +27,10 @@
 
 .main {
   left: 200px;
-  bottom: 0;
   right: 0;
   overflow: auto;
   background-color: #fafafa
 }
-
 
 /* menu
 ----------------------------------------------------------------*/
@@ -40,7 +38,6 @@
   padding: 15px;
   position: relative;
 }
-
 
 .menu-hd {
   position: relative;
@@ -55,7 +52,6 @@
   }
 }
 
-
 .menu {
   padding-bottom: 5px;
   margin-bottom: 10px;
@@ -66,9 +62,9 @@
   border-bottom: none
 }
 
-.menu-lst{
+.menu-lst {
   margin-bottom: 5px;
-  >li {
+  > li {
     margin-bottom: 4px
   }
   a {
@@ -81,7 +77,7 @@
     font-size: 12px;
     text-decoration: none;
     &:link,
-    &:visited{
+    &:visited {
       color: #666
     }
     &:hover {
@@ -93,14 +89,14 @@
   }
 }
 
-.menu-sub{
+.menu-sub {
   margin-top: 8px;
-  .menu-hd{
+  .menu-hd {
     padding-left: 27px;
     margin-bottom: 8px;
     font-size: 12px;
     font-weight: normal;
-    .iconfont{
+    .iconfont {
       position: absolute;
       top: -2px;
       right: 0;
@@ -108,8 +104,114 @@
       @include rotateX(180deg);
     }
   }
-  .menu-lst a{
+  .menu-lst a {
     padding-left: 37px;
   }
 
 }
+
+/* main
+-----------------------------------------------------------------*/
+.main-hd {
+  position: relative;
+  padding: 8px 20px;
+  border-bottom: 1px solid #ccc;
+  color: #4c4c4c;
+  font-size: 14px;
+  h2 {
+    margin-top: 3px;
+    font-size: 14px;
+    font-weight: 700;
+  }
+}
+.main-bd{
+  width: 1140px;
+  padding: 20px;
+}
+
+/* search
+-----------------------------------------------------------------*/
+.sch {
+  width: 100%;
+  padding: 15px 0 1px 0;
+  background-color: #f2f7fa;
+  border: 1px solid #d3dde7;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.sch-main {
+  padding-bottom: 5px;
+  width: 1200px;
+  @include clearfix();
+}
+
+
+.sch-lst {
+  float: left;
+  max-width: 990px;
+  padding-left: 20px;
+}
+
+.sch-item {
+  float: left;
+  width: 280px;
+  margin: 0 30px 10px 0;
+  padding-left: 80px;
+  @include box-sizing(border-box);
+}
+
+
+.sch-item-tit {
+  float: left;
+  width: 75px;
+  height: 26px;
+  line-height: 26px;
+  margin-left: -80px;
+  text-align: right;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.sch-item-bd {
+  position: relative;
+  width: 100%;
+  .sch-input {
+    height: 26px;
+    line-height: 16px;
+    width: 100%;
+    @include box-sizing(border-box);
+  }
+
+  .txt-date {
+    width: 90px;
+  }
+  .icon-delete {
+    background-color: #fff;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    /*display: none;*/
+  }
+  .icon-delete:hover {
+    background-position: -48px -272px;
+  }
+  .icon-delete:active {
+    background-position: -64px -272px;
+  }
+  .drop-lst {
+    width: 100%;
+    border-top: none;
+  }
+  .m-drop-select,
+  .drop-content {
+    width: 100%;
+  }
+}
+
+.sch-btn {
+  float: left;
+}
+
