--- a/style/css/component/vo_layout.css
+++ b/style/css/component/vo_layout.css
@@ -76,11 +76,11 @@ org/jruby/RubyProc.java:270:in `call'
 org/jruby/RubyProc.java:220:in `call'
 D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/path.rb:73:in `run_callback'
 D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/path.rb:55:in `callback_action'
-D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/path.rb:35:in `update'
-D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:39:in `modified'
+D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/path.rb:31:in `create'
+D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:26:in `created'
 org/jruby/RubyArray.java:1620:in `each'
-D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:37:in `modified'
-D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:18:in `refresh'
+D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:25:in `created'
+D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:17:in `refresh'
 D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/backends/polling.rb:17:in `run'
 org/jruby/RubyArray.java:1620:in `each'
 D:/Program Files/compass.app/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/backends/polling.rb:17:in `run'
