--- a/style/sass/component/vo_layout.scss
+++ b/style/sass/component/vo_layout.scss
@@ -188,19 +188,6 @@
   .txt-date {
     width: 90px;
   }
-  .icon-delete {
-    background-color: #fff;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    /*display: none;*/
-  }
-  .icon-delete:hover {
-    background-position: -48px -272px;
-  }
-  .icon-delete:active {
-    background-position: -64px -272px;
-  }
   .drop-lst {
     width: 100%;
     border-top: none;
@@ -213,5 +200,41 @@
 
 .sch-btn {
   float: left;
+}
+
+.sch-rst{
+  margin: 25px 0 5px;
+  text-align: right;
+  strong{
+    color: $red;
+  }
+}
+
+
+/* drop-lst
+----------------------------------------------------------------*/
+.drop-lst {
+  box-sizing: border-box;
+  min-width: 188px;
+  height: 132px;
+  background-color: #FFF;
+  border: 1px solid #ccc;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: absolute;
+  z-index: 199
+}
+
+.drop-lst span {
+  display: block;
+  height: 22px;
+  line-height: 22px;
+  padding: 0 5px;
+  color: #333
+}
+
+.drop-lst .highlight,.drop-lst span:hover {
+  text-decoration: none;
+  background-color: #e1edfa
 }
 
